8243925: Toolkit#getScreenInsets() returns wrong value on HiDPI screens (Windows)

Reviewed-by: prr, psadhukhan